--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,10 @@
 .App {
+  display: flex;
   text-align: center;
+  align-items: center;
+
+  width: auto;
+  height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +40,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.buttonconnect {
+  right: 5%;
 }
